Modified gitignore and add application.properties dummy

--- a/src/main/resources/applicationDummy.properties
+++ b/src/main/resources/applicationDummy.properties
@@ -1,9 +1,7 @@
-
-#
 # DATABASE
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/db_crudworkers
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/DB_NAME_GOES_HERE
 spring.datasource.username=root
-spring.datasource.password=
+spring.datasource.password=MYSQL_ROOT_PASSWORD_GOES_HERE
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 #spring.jpa.show-sql: true
